--- a/package.json
+++ b/package.json
@@ -8,17 +8,39 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:naokazuterada/middleman-template.git"
+    "url": "git@github.com:naokazuterada/naname-stage.git"
   },
   "author": "Naokazu Terada",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.16.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.16.0",
-    "clean-webpack-plugin": "^0.1.13",
-    "webpack": "^1.13.2"
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.9.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^2.1.0",
+    "node-sass": "^4.5.3",
+    "pug": "^2.0.0-rc.4",
+    "sass-loader": "^6.0.6",
+    "vue-i18n": "^7.3.2",
+    "vue-loader": "^13.3.0",
+    "webpack": "^3.8.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "flickity": "^2.0.10",
+    "js-cookie": "^2.1.3",
+    "json-loader": "^0.5.7",
+    "lodash": "^4.17.0",
+    "mobile-detect": "^1.3.7",
+    "moment": "^2.19.1",
+    "striptags": "^3.1.0",
+    "three-js": "^79.0.0",
+    "vue": "^2.5.2",
+    "vue-resize-directive": "^1.0.0",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.2"
+  }
 }
