--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Stage Creator",
+  "name": "StageCreator",
   "version": "0.0.1",
-  "description": "ななめな学校２用の教材",
+  "description": "Kyouzai for Naname School #2",
   "main": "script/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +23,7 @@
     "eslint-config-vue": "^2.0.2",
     "eslint-plugin-vue": "^2.1.0",
     "node-sass": "^4.5.3",
+    "npm-check-updates": "^2.13.0",
     "pug": "^2.0.0-rc.4",
     "sass-loader": "^6.0.6",
     "vue-i18n": "^7.3.2",
